--- a/app.json
+++ b/app.json
@@ -33,7 +33,7 @@
     },
     "CREDIT": {
       "description": "𝙀𝙣𝙩𝙚𝙧 𝘾𝙧𝙚𝙙𝙞𝙩 𝙉𝙖𝙢𝙚 𝙞𝙣 𝙖𝙡𝙢𝙤𝙨𝙩 6-8 𝙡𝙚𝙩𝙩𝙚𝙧𝙨",
-      "value": "🔼🔤🔤🔤🔤🔽🌈",
+      "value": "🔤🔤🔤🔤",
       "required": true
     }
   },
